# github-iac

./: Pulumi.yaml  README.md  __main__.py  main.py  pulumi.md  pyproject.toml
repos/: Miss_Pauling.py  dotfiles.py  example_repo.py  familytreerecipes.py  github_iac.py  goodguygroves_github_io.py  latex_resume.py  serverless_tf2.py
