[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Russell Groves", email = "russellgroves@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
license = {text = "GPLv3"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
