[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Russell Groves", email = "russellgroves@gmail.com"},
]
dependencies = [
    "pulumi>=3.24.1",
    "pulumi-github>=4.9.1",
]
requires-python = ">=3.9"
license = {text = "GPLv3"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
